@startuml
' ============================================================
'  GLOBAL STYLE
' ============================================================
skinparam backgroundColor white
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam classFontColor Black
skinparam classFontSize 14
skinparam classAttributeFontSize 11
skinparam ArrowColor Black
skinparam ArrowThickness 1.1
skinparam roundcorner 12
skinparam dpi 250
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 90
skinparam ranksep 120
skinparam packageStyle rectangle
top to bottom direction

title
<b><size:22>Black–Scholes Trading System – Clean Structured UML</size></b>
end title


' ============================================================
'  MARKET DATA
' ============================================================
package "Market Data Layer" #E6F3FF {
  together {
    class CSVData {
      - filePath: string
      - allData: map<string, vector<double>>
      - header: vector<string>
      - ticker: string
      --
      + loadData(filepath: string): bool
      + parseCSV(): void
      + getColumn(name: string): vector<double>
      + getTicker(): string
      + getDates(): vector<string>
      + getCurrentPrice(): double
      + getAverageVolume(): double
    }

    class Stocks {
      # ticker: string
      # companyName: string
      # sector: string
      # priceHistory: vector<double>
      # marketCap: double
      # peRatio: double
      # beta: double
      # dividendYield: double
      --
      + updateCurrentPrice(price: double): void
      + calculateVolatility(window: int = 30): double
      + calculateDailyReturn(): double
      + calculateBeta(indexReturns: vector<double>): double
      + getMovingAverage(days: int): double
      + getFundamentalSummary(): string
    }
  }
  CSVData --> Stocks : provides data >
}


' ============================================================
'  PORTFOLIO
' ============================================================
package "Portfolio Layer" #FFF8DC {
  together {
    abstract class Position {
      # positionId: string
      # ticker: string
      # quantity: int
      # entryPrice: double
      # currentPrice: double
      # openDate: time_t
      --
      + calculateValue(): double
      + updatePrice(price: double): void
      + closePosition(price: double): void
      + calculatePnL(): double
      + calculateReturnPercent(): double
    }

    class Portfolio {
      - portfolioId: string
      - positions: map<string, Position*>
      - cashBalance: double
      - realisedPnL: double
      - unrealisedPnL: double
      --
      + addPosition(Position*): void
      + calculateTotalValue(): double
      + calculateRiskExposure(): double
      + calculateSharpeRatio(): double
      + rebalancePortfolio(): void
    }

    class Order {
      - orderId: string
      - stock: Stocks*
      - orderType: OrderType
      - status: OrderStatus
      - quantity: int
      - price: double
      --
      + executeOrder(price: double, qty: int): void
      + cancelOrder(): void
      + modifyOrder(newPrice: double, newQty: int): void
    }
  }

  Stocks <|-- Position
  Position <|-- Portfolio
  Portfolio o-- Order : manages >
}


' ============================================================
'  USER
' ============================================================
package "User Management" #EAF4EA {
  class User {
    - userId: string
    - name: string
    - email: string
    - portfolios: vector<Portfolio*>
    - riskLevel: RiskLevel
    - riskTolerance: double
    --
    + addPortfolio(Portfolio*): void
    + calculateTotalValue(): double
    + calculateOverallReturn(): double
    + assessRiskProfile(): string
    + printProfile(): void
  }

  User o-- Portfolio : owns >
}


' ============================================================
'  PRICING
' ============================================================
package "Pricing & Derivatives" #F5F5F5 {
  abstract class Options {
    - optionType: string
    - underlying: Stocks
    - strike: double
    - expiry: time_t
    --
    + getOptionType(): string
    + getTimeToMaturity(): double
  }

  class BlackScholes {
    - spot: double
    - strike: double
    - rate: double
    - volatility: double
    - maturity: double
    - dividendYield: double
    --
    + callPrice(): double
    + putPrice(): double
    + delta(): double
    + gamma(): double
    + vega(): double
    + theta(): double
    + rho(): double
  }

  Options <|-- BlackScholes
  Options --> Stocks : uses >
}


' ============================================================
'  GRAPHIC SYSTEM
' ============================================================
package "Graphic System" #E6F8FF {
  abstract class Graphic {
    - windowWidth: int
    - windowHeight: int
    - title: string
    - frameRate: double
    --
    + init(): void
    + render(): void
    + update(): void
    + handleEvents(): void
    + shutdown(): void
  }

  class Dashboard {
    - graphs: vector<Graphs*>
    - backgroundColor: string
    - refreshInterval: double
    --
    + addGraph(Graphs*): void
    + removeGraph(string title): void
    + render(): void
    + refreshData(): void
    + displayStats(User*): void
  }

  abstract class Graphs {
    - position: tuple<int,int>
    - size: tuple<int,int>
    - title: string
    - data: vector<double>
    --
    + draw(): void
    + resize(scale: double): void
    + setData(vector<double>): void
  }

  class Line {
    - dataPoints: vector<pair<double,double>>
    - color: string
    --
    + draw(): void
    + smoothCurve(): void
  }

  class Bar {
    - barValues: vector<double>
    - barColor: string
    --
    + draw(): void
    + setBarWidth(width: double): void
  }

  abstract class UserInput {
    - elements: vector<InputElement*>
    - cursorPos: tuple<int,int>
    --
    + processEvents(): void
    + render(): void
    + failure(): void
  }

  abstract class InputElement {
    - position: tuple<int,int>
    - size: tuple<int,int>
    - isHovered: bool
    --
    + draw(): void
    + updateState(): void
  }

  class Button {
    - label: string
    - onClick: function
    --
    + draw(): void
    + click(): void
  }

  class Text {
    - content: string
    - font: string
    - fontSize: int
    --
    + draw(): void
    + updateText(newText: string): void
  }

  ' inheritance
  Graphic     <|-- Dashboard
  Dashboard   <|-- UserInput
  Graphs      <|-- Line
  Graphs      <|-- Bar
  InputElement<|-- Button
  InputElement<|-- Text

  ' composition
  Dashboard *-- Graphs
  UserInput *-- InputElement
}


' ============================================================
'  CROSS-LAYER RELATIONSHIPS  (tidy downward flow)
' ============================================================
User         --> Dashboard  : controls >
Dashboard    --> Portfolio  : displays holdings >
Portfolio    --> Stocks     : contains data >
BlackScholes --> Dashboard  : feeds analytics >
Dashboard    --> UserInput  : handles input >
User         --> Portfolio  : manages >

@enduml
